examples/test/testpolicy16691.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16691
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key28: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value30
          key2: value44
          key47: value7
      podSelector:
        matchLabels:
          key36: value7
          key31: value1
          key42: value4
